overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
 body {
   height: 100vh;
   background-color: #fff;
+  overflow-x: hidden;
 }
